--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,18 @@
-asgiref==3.2.3
+asgiref==3.2.7
 beautifulsoup4==4.8.2
-bs4==0.0.1
+certifi==2020.4.5.1
+chardet==3.0.4
 Django==3.0.3
-MarkupSafe==1.1.1
-matplotlib==3.1.2
-numpy==1.18.1
-pandas==1.0.0
-Pillow==7.0.0
-python-dateutil==2.8.1
-requests==2.22.0
-six==1.14.0
-soupsieve==1.9.5
-sqlparse==0.3.0
-tabulate==0.8.6
-urllib3==1.25.8
-plotly==4.6.0
 django-autocomplete-light==3.5.1
+idna==2.9
+numpy==1.18.3
+pandas==1.0.0
+plotly==4.6.0
+python-dateutil==2.8.1
+pytz==2020.1
+requests==2.23.0
+retrying==1.3.3
+six==1.14.0
+soupsieve==2.0
+sqlparse==0.3.1
+urllib3==1.25.9
