--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "python.pythonPath": "C:\\ProgramData\\Anaconda3\\python.exe"
+    "python.pythonPath": "rebEnv\\Scripts\\python.exe",
+    "python.envFile": "${workspaceFolder}/dev.env",
 }
