--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,7 @@
-asgiref==3.2.7
-beautifulsoup4==4.8.2
-certifi==2020.4.5.1
-chardet==3.0.4
-Django==3.0.3
+django==3.0.3
 django-autocomplete-light==3.5.1
-idna==2.9
+beautifulsoup4==4.8.2
 numpy==1.18.3
+requests==2.23.0
 pandas==1.0.0
 plotly==4.6.0
-python-dateutil==2.8.1
-pytz==2020.1
-requests==2.23.0
-retrying==1.3.3
-six==1.14.0
-soupsieve==2.0
-sqlparse==0.3.1
-urllib3==1.25.9
