--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-django==3.0.3
+django==2.0.*
 django-autocomplete-light==3.5.1
 beautifulsoup4==4.8.2
 numpy==1.18.3
@@ -6,3 +6,5 @@ requests==2.23.0
 pandas==1.0.0
 plotly==4.6.0
 mysqlclient==1.4.6
+gunicorn==20.0.4
+whitenoise==5.1.0
