--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -26,5 +26,8 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
     - name: Run Tests
+      env:
+        DJANGO_SETTINGS_MODULE: ${{ secrets.DJANGO_SETTINGS_MODULE }}
+        SECRET_KEY: ${{ secrets.SECRET_KEY }}  
       run: |
         python manage.py test
